gcp/continuous-deployment/api-gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - image: interpres/api-gateway
          imagePullPolicy: IfNotPresent
          name: api-gateway
          ports:
            - containerPort: 8080
              protocol: TCP
