gcp/continuous-deployment/core-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core
spec:
  selector:
    matchLabels:
      app: core
  template:
    metadata:
      labels:
        app: core
    spec:
      containers:
        - image: interpres/core
          name: core
#          change to IfNotPresent
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8091
              protocol: TCP
