gcp/continuous-deployment/integration-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration
spec:
  selector:
    matchLabels:
      app: integration
  template:
    metadata:
      labels:
        app: integration
    spec:
      containers:
        - image: interpres/integration
          name: integration
#          change to IfNotPresent
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8092
              protocol: TCP
