gcp/continuous-deployment/user-management-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management
spec:
  selector:
    matchLabels:
      app: user-management
  template:
    metadata:
      labels:
        app: user-management
    spec:
      containers:
        - image: interpres/user-management
          name: user-management
#          change to IfNotPresent
          imagePullPolicy: Never
          ports:
            - containerPort: 8085
              protocol: TCP
