gcp/continuous-deployment/api-gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
    - name: api-gateway
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
