gcp/continuous-deployment/client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
