gcp/continuous-deployment/core-service.yml
apiVersion: v1
kind: Service
metadata:
  name: core
spec:
  selector:
    app: core
  ports:
    - name: core
      protocol: TCP
      port: 8091
      targetPort: 8091
