gcp/continuous-deployment/gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app: gateway-service
spec:
  ports:
    - name: http
      port: 8090
      targetPort: 8090
  selector:
    app: gateway
  type: NodePort
