gcp/continuous-deployment/user-management-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-management
spec:
  selector:
    app: user-management
  ports:
    - name: user-management
      protocol: TCP
      port: 8085
      targetPort: 8085
