gcp/continuous-deployment/ingress-resource.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: @@NGINX_INGRESS_IP@@.xip.io
      http:
        paths:
          - backend:
              serviceName: gateway-service
              servicePort: 8090
            path: /api
